# HoverTop

./: .gitignore  README.md  build.sh
docs/superpowers/plans/: 2026-05-05-hovertop.md  2026-05-08-stock-dashboard.md
docs/superpowers/specs/: 2026-05-05-hovertop-design.md  2026-05-08-stock-dashboard-design.md
examples/: system_monitor.py
python/: pyproject.toml
python/examples/: binance_dashboard.py  stock_dashboard.py
python/hovertop/: __init__.py  app_manager.py  models.py  server.py  widget.py
python/tests/: conftest.py  test_app_manager.py  test_models.py  test_server.py  test_stock_dashboard.py  test_widget.py
swift/: Package.swift
swift/Sources/HoverTop/: ContentView.swift  DisplayState.swift  FloatingWindow.swift  HoverTopApp.swift  Models.swift  WebSocketClient.swift
swift/Tests/HoverTopTests/: ModelTests.swift
